[metadata]
name = mdakit
version = 0.0.1
author = Jonathan Barnoud
author_email = jonathan@barnoud.net
description = A linter for MDAnalysis and prograns using it.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MDAnalysis/mdakit
project_urls =
    Bug Tracker = https://github.com/MDAnalysis/mdakit/issues
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
